add about us and contact

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="./src/images/logo.png" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -11,7 +12,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./src/css/main.css" />
-    <title>Document</title>
+    <title>Lumos | Home</title>
   </head>
  
   <body class="bg-[#1F1F1F]" >
@@ -43,7 +44,7 @@
             <div class="container mx-auto">
                     <div class="menu-list flex flex-col lg:ml-40 p-10 ">
                       <a href="#" class="text-white text-[40px] hover:text-[#F50C0C] transition-all  duration-300 font-bold">Home</a>
-                      <a href="#" class="text-white text-[40px] hover:text-[#F50C0C] transition-all  duration-300 font-bold">About Us</a>
+                      <a href="index2.html" class="text-white text-[40px] hover:text-[#F50C0C] transition-all  duration-300 font-bold">About Us</a>
                       <a href="#" class="text-white text-[40px] hover:text-[#F50C0C] transition-all  duration-300 font-bold">Contact</a>
                     </div>
             </div>
@@ -65,7 +66,7 @@
             >
           </h1>
           <p class="text-[#BFB8B8] text-[32px] inter-lumos">
-            we are a <span id="animated-text" class="text-white"></span>
+            We are <span id="animated-text" class="text-white"></span>
           </p>
         </div>
         <div class="social-links flex flex-col items-center gap-2 mt-22 relative z-10">
@@ -323,7 +324,7 @@
 
       showCarousel(0);
 
-      const text = "dwsign agency";
+      const text = "Lumos Development";
       const element = document.getElementById("animated-text");
       let index = 0;
 
