--- a/index3.html
+++ b/index3.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="./src/images/logo.png" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="icon" type="image/x-icon" href="./src/images/logo.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./src/css/main.css" />
-    <title>Lumos | About Us</title>
+    <title>Lumos | Contact</title>
   </head>
  
   <body class="bg-[#1F1F1F]" >
@@ -56,16 +56,32 @@
       </nav>
       <!-- title -->
        <main>
-        <div class="about-us">
-            <h1 class="text-white text-[50px] lg:text-[120px] font-bold inter-lumos mb-10 text-center ">
-              
-                <span class="font-bold text-[#F50C0C] lg:text-150">About</span> Us</h1>
+        <div class="contact">
+            <h1 class="text-white text-[50px] lg:text-[160px] font-bold inter-lumos mb-10 text-center ">
+                <span class="font-bold text-[#F50C0C] lg:text-150">Conta</span>ct </h1>
                 <div class="border-1 border-[#BFB8B8] md:w-[60%] mx-auto mb-20"></div>
-                <div class="container mx-auto px-4 lg:w-[80%]">
-            <p class="text-white text-sm inter-lumos leading-8 mb-20  lg:text-[24px] lg:leading-10">
-                Welcome to dwsign agency, where creativity meets innovation. We are a team of passionate designers and developers dedicated to crafting exceptional digital experiences. Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe pariatur exercitationem asperiores quibusdam natus iusto hic quia fugiat facilis dolore quisquam sequi consectetur accusantium, possimus eveniet odio nisi officia ad?
-            </p>
+            <div class="text-white text-sm inter-lumos leading-8 mb-20 text-center  lg:text-[20px] lg:leading-10">
+                <p>1444 S. Alameda Street Los Angeles, California 90021</p>
+                <p></p>
+                <p>
+                    <a href="mailto:hi@gorge.com" class="text-white hover:text-[#F50C0C] transition-all duration-300">hi@gorge.com</a>
+                </p>
+                <p>
+                    <a href="tel:0800123456789" class="text-white hover:text-[#F50C0C] transition-all duration-300">0800 123 456789</a>
+                </p>
             </div>
+        </div>
+        <div class="send-messege">
+            <form action="#" class="flex flex-col gap-6 lg:w-[50%] mx-auto">
+                <div class="flex flex-col lg:flex-row gap-6">
+                    <input type="text" placeholder="Your Name" class="flex-1 p-4 bg-[#1F1F1F] border border-[##FFFFFF] rounded-xl text-white inter-lumos focus:outline-none  focus:border-[#d40a0a]"/>
+                    <input type="email" placeholder="Your Email" class="flex-1 p-4 bg-[#1F1F1F] border border-[##FFFFFF] rounded-xl text-white inter-lumos focus:outline-none focus:border-[#d40a0a]"/>
+                </div>
+                <textarea rows="5" placeholder="Your Message" class="p-4 bg-[#1F1F1F] border border-[##FFFFFF] rounded-xl text-white inter-lumos focus:outline-none focus:border-[#d40a0a]"></textarea>
+                <div class="flex justify-center">
+                    <button type="submit" class="bg-[#F50C0C] cursor-pointer w-full sm:w-[30%] text-white inter-lumos font-bold py-3 hover:bg-[#d40a0a] rounded-[50px] transition-all duration-300">Submit</button>
+                </div>
+            </form>
         </div>
        </main>
  
