--- a/index2.html
+++ b/index2.html
@@ -16,7 +16,7 @@
   </head>
 
   <body class="bg-[#1F1F1F]">
-    <div class="container mx-auto px-4">
+    <div class="container-xl mx-auto px-10">
       <nav class="py-2">
         <div class="flex justify-between items-center h-30">
           <div class="logo z-100">
@@ -38,7 +38,7 @@
                 class="border-2 border-white w-[50px] h-[1px] z-100 border-n"
               ></p>
               <p
-                class="border-2 border-white w-[30px] h-[1px] z-100 border-h"
+                class="border-2 border-white h-[1px] z-100 border-h custom-border"
               ></p>
             </button>
           </div>
@@ -77,12 +77,12 @@
       <main>
         <div class="about-us">
           <h1
-            class="text-white text-[50px] lg:text-[120px] font-bold inter-lumos mb-10 text-center"
+            class="text-white text-[50px] lg:text-[120px] font-bold gabarito-lumos mb-10 text-center"
           >
             <span class="font-bold text-[#F50C0C] lg:text-150">About</span> Us
           </h1>
-          <div class="border-1 border-[#BFB8B8] md:w-[60%] mx-auto mb-20"></div>
-          <div class="container mx-auto px-4 lg:w-[80%]">
+          <div class="border-1 border-[#454545] md:w-[60%] mx-auto mb-20"></div>
+          <div class="container mx-auto md:px-20 lg:w-[80%]">
             <p
               class="text-white text-sm inter-lumos leading-8 mb-20 lg:text-[24px] lg:leading-10"
             >
@@ -99,9 +99,11 @@
       </main>
     </div>
     <footer
-      class="footer-content text-center bg-black inter-lumos h-50 text-[14px] bottom-0 w-full mt-50"
+      class="footer-content text-center bg-black inter-lumos h-50 text-[14px] bottom-0 w-full mt-80"
     >
-      <div class="flex justify-center items-center h-50 py-6 text-[#BFB8B8]">
+      <div
+        class="flex justify-center items-center mt-100 h-50 py-6 text-[#BFB8B8]"
+      >
         <p>© 2025 dwsign agency. All rights reserved.</p>
       </div>
     </footer>
