--- a/index3.html
+++ b/index3.html
@@ -16,7 +16,7 @@
   </head>
 
   <body class="bg-[#1F1F1F]">
-    <div class="container mx-auto px-4">
+    <div class="container-xl mx-auto px-10">
       <nav class="py-2">
         <div class="flex justify-between items-center h-30">
           <div class="logo z-100">
@@ -29,7 +29,7 @@
           </div>
           <div class="menu-icon cursor-pointer z-100">
             <button
-              class="menu-toggle menu-icon flex flex-col gap-2 justify-center cursor-pointer z-100"
+              class="menu-toggle flex flex-col gap-2 justify-center cursor-pointer z-100"
             >
               <p
                 class="border-2 border-white w-[50px] h-[1px] z-100 border-t"
@@ -77,7 +77,7 @@
       <main>
         <div class="contact">
           <h1
-            class="text-white text-[50px] lg:text-[160px] font-bold inter-lumos mb-10 text-center"
+            class="text-white text-[50px] lg:text-[120px] font-bold gabarito-lumos mb-10 text-center"
           >
             <span class="font-bold text-[#F50C0C] lg:text-150">Conta</span>ct
           </h1>
