--- a/index4.html
+++ b/index4.html
@@ -122,7 +122,7 @@
             </p>
           </div>
         </div>
-        <div class="gallery">
+        <div class="gallery mt-20">
           <div class="grid lg:grid-cols-4 md:grid-cols-2 grid-cols-1 gap-8">
             <div class="lg:col-span-2 overflow-hidden rounded-lg">
               <a
