add inner page version 2

--- a/index2.html
+++ b/index2.html
@@ -79,7 +79,7 @@
           <h1
             class="text-white text-[50px] lg:text-[120px] font-bold gabarito-lumos mb-10 text-center"
           >
-            <span class="font-bold text-[#F50C0C] lg:text-150">About</span> Us
+            <span class="font-bold text-[#EA0026] lg:text-150">About</span> Us
           </h1>
           <div class="border-1 border-[#454545] md:w-[60%] mx-auto mb-20"></div>
           <div class="container mx-auto md:px-20 lg:w-[80%]">
