--- a/index3.html
+++ b/index3.html
@@ -79,7 +79,7 @@
           <h1
             class="text-white text-[50px] lg:text-[120px] font-bold gabarito-lumos mb-10 text-center"
           >
-            <span class="font-bold text-[#F50C0C] lg:text-150">Conta</span>ct
+            <span class="font-bold text-[#EA0026] lg:text-150">Conta</span>ct
           </h1>
           <div class="border-1 border-[#454545] md:w-[60%] mx-auto mb-20"></div>
           <div
@@ -132,7 +132,7 @@
             </div>
           </form>
           <div
-            class="border-1 border-[red] md:w-[50%] mx-auto mb-20 text-center mt-20 overkflow-hidden flex items-center justify-center"
+            class="border-1 border-[#EA0026] md:w-[50%] mx-auto mb-20 text-center mt-20 overkflow-hidden flex items-center justify-center"
           >
             <p
               class="text-white montserrat-lumos whitespace-nowrap animate-marquee text-sm md:text-base p-2"
