--- a/index.html
+++ b/index.html
@@ -66,28 +66,30 @@
                 <div class="menu-list flex flex-col">
                   <a
                     href="#"
-                    class="text-white text-[40px] hover:text-[#F50C0C] transition-all duration-300 font-bold"
+                    class="text-white text-[40px] hover:text-[#EA0026] transition-all duration-300 font-bold"
                     >Home</a
                   >
                   <a
                     href="index2.html"
-                    class="text-white text-[40px] hover:text-[#F50C0C] transition-all duration-300 font-bold"
+                    class="text-white text-[40px] hover:text-[#EA0026] transition-all duration-300 font-bold"
                     >About Us</a
                   >
                   <a
                     href="#"
-                    class="text-white text-[40px] hover:text-[#F50C0C] transition-all duration-300 font-bold"
+                    class="text-white text-[40px] hover:text-[#EA0026] transition-all duration-300 font-bold"
                     >Contact</a
                   >
                 </div>
                 <div class="hidden lg:flex flex-col items-start text-white gabarito-lumos text-right bg-black h-full absolute top-0 right-0 w-[32%] text-center justify-center p-10">
-                  <p class="text-[30px] text-[#ea0026]">Get In Touch</p>
+                  <p class="text-[30px] text-[#EA0026]">Get In Touch</p>
                   <p class="text-white text-[20px]"><a href="mailto:hi@yourdomain.com">hi@yourdomain.com</a></p>
                 </div>
               </div>
             </div>
           </div>
-      </nav>
+        </div>
+        </nav>
+      
       <!-- title -->
       <div
         class="slider flex justify-between items-center mt-10 w-full mb-50 relative"
@@ -98,7 +100,7 @@
           >
             More of
             <span class="block"
-              >an <span class="text-[#F50C0C]">agency</span></span
+              >an <span class="text-[#EA0026]">agency</span></span
             >
           </h1>
           <p class="text-[#BFB8B8] text-[20px] md:text-[32px] montserrat-lumos">
@@ -123,7 +125,7 @@
       >
         <div>
           <div
-            class="filters text-[15px] left-80 top-0 text-lg gap-6 lg:rotate-270 absolute lg:top-0 lg:left-30 lg:transform -translate-x-1/1 lg:mt-50 flex lg:mb-10 text-[#A8A8A8] transition-all duration-300 text-bold"
+            class="filters text-[15px] left-80 top-0 text-lg gap-6 lg:rotate-270 absolute lg:top-4 lg:left-30 lg:transform -translate-x-1/1 lg:mt-50 flex lg:mb-10 text-[#A8A8A8] transition-all duration-300 text-bold"
           >
             <button
               data-filter="all"
@@ -161,7 +163,8 @@
                   alt=""
                 />
                 <div class="card-overlay">
-                  <h3 class="card-title">Branding Project</h3>
+                  <h3 class="card-title md:flex-col montserrat-lumos text-[22px] font-[100]">Brand Identity</h3>
+                  <h3 class="card-title-secondary block montserrat-lumos">Photo Shoot</h3>
                 </div>
               </div>
             </div>
@@ -173,7 +176,8 @@
                   alt=""
                 />
                 <div class="card-overlay">
-                  <h3 class="card-title">Digital Design</h3>
+                  <h3 class="card-title md:flex-col">Brand Identity</h3>
+                  <h3 class="card-title-secondary block font-thin">Photo Shoot</h3>
                 </div>
               </div>
             </div>
@@ -185,7 +189,8 @@
                   alt=""
                 />
                 <div class="card-overlay">
-                  <h3 class="card-title">Photography</h3>
+                  <h3 class="card-title md:flex-col">Brand Identity</h3>
+                  <h3 class="card-title-secondary block ">Photo Shoot</h3>
                 </div>
               </div>
             </div>
@@ -197,7 +202,8 @@
                   alt=""
                 />
                 <div class="card-overlay">
-                  <h3 class="card-title">Digital Work</h3>
+                     <h3 class="card-title md:flex-col">Brand Identity</h3>
+                     <h3 class="card-title-secondary block ">Photo Shoot</h3>
                 </div>
               </div>
             </div>
@@ -208,8 +214,9 @@
                   src="./src/images/card/card-6.jpg"
                   alt=""
                 />
-                <div class="card-overlay">
-                  <h3 class="card-title">Brand Identity</h3>
+                <div class="card-overlay ">
+                  <h3 class="card-title md:flec-col">Brand Identity</h3>
+                     <h3 class="card-title-secondary block ">Photo Shoot</h3>
                 </div>
               </div>
             </div>
@@ -221,7 +228,8 @@
                   alt=""
                 />
                 <div class="card-overlay">
-                  <h3 class="card-title">Photo Shoot</h3>
+                  <h3 class="card-title md:flex-col">Brand Identity</h3>
+                  <h3 class="card-title-secondary block ">Photo Shoot</h3>
                 </div>
               </div>
             </div>
@@ -229,10 +237,13 @@
         </div>
 
         <button
-          class="mt-6 gabarito-lumos active:scale-110 pl-10 pr-10 px-4 py-2 border border-[#F50C0C] text-white rounded-[20px] hover:bg-[#F50C0C] hover:text-white transition-all duration-300 mb-20 cursor-pointer hover:translate-x-1"
+          class="mt-6 gabarito-lumos active:scale-110 pl-10 pr-10 px-4 py-2 border border-[#EA0026] text-white rounded-[20px] hover:bg-[#EA0026] hover:text-white transition-all duration-300 mb-20 cursor-pointer hover:translate-x-1"
         >
           Load More
         </button>
+        </div>
+        
+
         <!-- <div class="mb-20 text-center mx-auto flex justify-center w-full">
           <p class="border-1 border-[#454545] w-[700px]"></p>
         </div>
