--- a/index.html
+++ b/index.html
@@ -408,12 +408,18 @@
       // showCarousel(0);
 
       const text = "Lumos Development";
+      const text2 = "Creative Agency";
+      const text3 = "Innovative Solutions";
+
       const element = document.getElementById("animated-text");
       let index = 0;
+      const texts = [text, text2, text3];
+      let currentTextIndex = 0;
+      let currentText = texts[currentTextIndex];
 
       function typeText() {
-        if (index < text.length) {
-          element.textContent += text[index];
+        if (index < currentText.length) {
+          element.textContent += currentText[index];
           index++;
           setTimeout(typeText, 100);
         } else {
@@ -423,10 +429,13 @@
 
       function clearText() {
         if (index > 0) {
-          element.textContent = text.substring(0, index - 1);
+          element.textContent = currentText.substring(0, index - 1);
           index--;
           setTimeout(clearText, 100);
         } else {
+          // Move to next text in the cycle
+          currentTextIndex = (currentTextIndex + 1) % texts.length;
+          currentText = texts[currentTextIndex];
           setTimeout(typeText, 500);
         }
       }
