--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
           <div
             class="mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 py-15 text-center h-auto mt-[300px]"
           >
-            <div class="card" data-category="branding">
+          <a href="" class="filter-card" data-category="branding">
+            <div class="card" >
               <div class="card-content">
                 <img
                   class="rounded-[15px] h-auto"
@@ -168,6 +169,9 @@
                 </div>
               </div>
             </div>
+            </a>
+
+            <a href="" class="filter-card" data-category="digital">
             <div class="card" data-category="digital">
               <div class="card-content">
                 <img
@@ -181,11 +185,13 @@
                 </div>
               </div>
             </div>
-            <div class="card" data-category="photography">
-              <div class="card-content">
-                <img
-                  class="rounded-[15px] h-auto"
-                  src="./src/images/card/card-3.jpg"
+            </a>
+            <a href="" class="filter-card" data-category="photography">
+              <div class="card" data-category="photography">
+                <div class="card-content">
+                  <img
+                    class="rounded-[15px] h-auto"
+                    src="./src/images/card/card-3.jpg"
                   alt=""
                 />
                 <div class="card-overlay">
@@ -194,11 +200,12 @@
                 </div>
               </div>
             </div>
-            <div class="card" data-category="digital">
-              <div class="card-content">
-                <img
-                  class="rounded-[15px] h-auto"
-                  src="./src/images/card/card4.jpg"
+            <a href="" class="filter-card" data-category="digital">
+              <div class="card" data-category="digital">
+                <div class="card-content">
+                  <img
+                    class="rounded-[15px] h-auto"
+                    src="./src/images/card/card4.jpg"
                   alt=""
                 />
                 <div class="card-overlay">
@@ -207,6 +214,8 @@
                 </div>
               </div>
             </div>
+            </a>
+            <a href="" class="filter-card" data-category="branding">
             <div class="card" data-category="branding">
               <div class="card-content">
                 <img
@@ -220,6 +229,8 @@
                 </div>
               </div>
             </div>
+            </a>
+            <a href="" class="filter-card" data-category="photography">
             <div class="card" data-category="photography">
               <div class="card-content">
                 <img
@@ -233,6 +244,7 @@
                 </div>
               </div>
             </div>
+            </a>
           </div>
         </div>
 
@@ -329,7 +341,7 @@
         });
       // Filter functionality
       const filterBtns = document.querySelectorAll(".filter-btn");
-      const cards = document.querySelectorAll(".card");
+      const cards = document.querySelectorAll(".filter-card");
 
       filterBtns.forEach((btn) => {
         btn.addEventListener("click", () => {
