update meta tags for accessibility and improve card title semantics

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <meta name="description" content="lumos Development Agency" />
     <link
       href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
@@ -32,12 +33,14 @@
               ><img
                 src="./src/images/logo.png"
                 class="w-[65.81px] h-[84px]"
-                alt=""
+                alt="Lumos Logo"
+                aria-label="Hamburger menu"
             /></a>
           </div>
           <div class="menu-icon cursor-pointer z-100">
             <button
               class="menu-toggle menu-icon flex flex-col gap-1 justify-center cursor-pointer z-100"
+              aria-label="Hamburger menu"
             >
               <p
                 class="border-2 border-white w-[30px] h-[1px] z-100 border-t"
@@ -164,8 +167,8 @@
                   alt=""
                 />
                 <div class="card-overlay">
-                  <h3 class="card-title md:flex-col montserrat-lumos text-[22px] font-[100]">Brand Identity</h3>
-                  <h3 class="card-title-secondary block montserrat-lumos">Photo Shoot</h3>
+                  <h2 class="card-title md:flex-col montserrat-lumos text-[22px] font-[100]">Brand Identity</h2>
+                  <h2 class="card-title-secondary block montserrat-lumos">Photo Shoot</h2>
                 </div>
               </div>
             </div>
@@ -180,8 +183,8 @@
                   alt=""
                 />
                 <div class="card-overlay">
-                  <h3 class="card-title md:flex-col">Brand Identity</h3>
-                  <h3 class="card-title-secondary block font-thin">Photo Shoot</h3>
+                  <h2 class="card-title md:flex-col">Brand Identity</h2>
+                  <h2 class="card-title-secondary block font-thin">Photo Shoot</h2>
                 </div>
               </div>
             </div>
@@ -195,8 +198,8 @@
                   alt=""
                 />
                 <div class="card-overlay">
-                  <h3 class="card-title md:flex-col">Brand Identity</h3>
-                  <h3 class="card-title-secondary block ">Photo Shoot</h3>
+                  <h2 class="card-title md:flex-col">Brand Identity</h2>
+                  <h2 class="card-title-secondary block ">Photo Shoot</h2>
                 </div>
               </div>
             </div>
@@ -209,8 +212,8 @@
                   alt=""
                 />
                 <div class="card-overlay">
-                     <h3 class="card-title md:flex-col">Brand Identity</h3>
-                     <h3 class="card-title-secondary block ">Photo Shoot</h3>
+                     <h2 class="card-title md:flex-col">Brand Identity</h2>
+                     <h2 class="card-title-secondary block ">Photo Shoot</h2>
                 </div>
               </div>
             </div>
@@ -224,8 +227,8 @@
                   alt=""
                 />
                 <div class="card-overlay ">
-                  <h3 class="card-title md:flec-col">Brand Identity</h3>
-                     <h3 class="card-title-secondary block ">Photo Shoot</h3>
+                  <h2 class="card-title md:flec-col">Brand Identity</h2>
+                     <h2 class="card-title-secondary block ">Photo Shoot</h2>
                 </div>
               </div>
             </div>
@@ -239,8 +242,8 @@
                   alt=""
                 />
                 <div class="card-overlay">
-                  <h3 class="card-title md:flex-col">Brand Identity</h3>
-                  <h3 class="card-title-secondary block ">Photo Shoot</h3>
+                  <h2 class="card-title md:flex-col">Brand Identity</h2>
+                  <h2 class="card-title-secondary block ">Photo Shoot</h2>
                 </div>
               </div>
             </div>
