refactor layout and styles for improved responsiveness and accessibility

--- a/index2.html
+++ b/index2.html
@@ -77,7 +77,7 @@
       <main>
         <div class="about-us">
           <h1
-            class="text-white text-[50px] lg:text-[120px] font-bold gabarito-lumos mb-10 text-center"
+            class="text-white text-[50px] lg:text-[120px] font-bold gabarito-lumos mt-10 md:mt-0 mb-10 text-center"
           >
             <span class="font-bold text-[#EA0026] lg:text-150">About</span> Us
           </h1>
