--- a/index3.html
+++ b/index3.html
@@ -77,7 +77,7 @@
       <main>
         <div class="contact">
           <h1
-            class="text-white text-[50px] lg:text-[120px] font-bold gabarito-lumos mb-10 text-center"
+            class="text-white text-[50px] lg:text-[120px] mt-20 md:mt-0 font-bold gabarito-lumos mb-10 text-center"
           >
             <span class="font-bold text-[#EA0026] lg:text-150">Conta</span>ct
           </h1>
