--- a/index3.html
+++ b/index3.html
@@ -77,11 +77,11 @@
       <main>
         <div class="contact">
           <h1
-            class="text-white text-[50px] lg:text-[120px] mt-20 md:mt-0 font-bold gabarito-lumos mb-10 text-center"
+            class="text-white text-[50px] lg:text-[120px] mt-15 md:mt-0 mb-5 font-bold gabarito-lumos text-center"
           >
             <span class="font-bold text-[#EA0026] lg:text-150">Conta</span>ct
           </h1>
-          <div class="border-1 border-[#454545] md:w-[60%] mx-auto mb-20"></div>
+          <div class="border-1 border-[#454545] md:w-[60%] mx-auto mb-10"></div>
           <div
             class="text-white text-sm inter-lumos leading-8 mb-20 text-center lg:text-[20px] lg:leading-10"
           >
