--- a/index3.html
+++ b/index3.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="icon" type="image/x-icon" href="./src/images/logo.png" />
@@ -31,15 +30,9 @@
             <button
               class="menu-toggle flex flex-col gap-2 justify-center cursor-pointer z-100"
             >
-              <p
-                class="border-2 border-white w-[50px] h-[1px] z-100 border-t"
-              ></p>
-              <p
-                class="border-2 border-white w-[50px] h-[1px] z-100 border-n"
-              ></p>
-              <p
-                class="border-2 border-white w-[30px] h-[1px] z-100 border-h"
-              ></p>
+              <p class="border-2 border-white w-[50px] h-px z-100 border-t"></p>
+              <p class="border-2 border-white w-[50px] h-px z-100 border-n"></p>
+              <p class="border-2 border-white w-[30px] h-px z-100 border-h"></p>
             </button>
           </div>
         </div>
@@ -81,7 +74,7 @@
           >
             <span class="font-bold text-[#EA0026] lg:text-150">Conta</span>ct
           </h1>
-          <div class="border-1 border-[#454545] md:w-[60%] mx-auto mb-10"></div>
+          <div class="border border-[#454545] md:w-[60%] mx-auto mb-10"></div>
           <div
             class="text-white text-sm inter-lumos leading-8 mb-20 text-center lg:text-[20px] lg:leading-10"
           >
@@ -132,7 +125,7 @@
             </div>
           </form>
           <div
-            class="border-1 border-[#EA0026] md:w-[50%] mx-auto mb-20 text-center mt-20 overkflow-hidden flex items-center justify-center"
+            class="border border-[#EA0026] md:w-[50%] mx-auto mb-20 text-center mt-20 overkflow-hidden flex items-center justify-center"
           >
             <p
               class="text-white montserrat-lumos whitespace-nowrap animate-marquee text-sm md:text-base p-2"
@@ -170,12 +163,6 @@
             .querySelector(".border-t")
             .classList.toggle("translate-y-[-20px]");
         });
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-    <script>
-      particlesJS.load("particles-js", "./particles.json", function () {
-        console.log("callback - particles-js config loaded");
-      });
     </script>
   </body>
 </html>
