--- a/index5.html
+++ b/index5.html
@@ -35,15 +35,9 @@
             <button
               class="menu-toggle flex flex-col gap-2 justify-center cursor-pointer z-100"
             >
-              <p
-                class="border-2 border-white w-[50px] h-[1px] z-100 border-t"
-              ></p>
-              <p
-                class="border-2 border-white w-[50px] h-[1px] z-100 border-n"
-              ></p>
-              <p
-                class="border-2 border-white w-[30px] h-[1px] z-100 border-h"
-              ></p>
+              <p class="border-2 border-white w-[50px] h-px z-100 border-t"></p>
+              <p class="border-2 border-white w-[50px] h-px z-100 border-n"></p>
+              <p class="border-2 border-white w-[30px] h-px z-100 border-h"></p>
             </button>
           </div>
         </div>
@@ -112,7 +106,7 @@
             </ul>
           </div>
         </div>
-        <div class="gallary md:max-w-6xl mx-auto mt-20 mb-20 md:px-5 md:px-0">
+        <div class="gallary md:max-w-6xl mx-auto mt-20 mb-20 md:px-5">
           <div class="flex flex-col justify-center items-center">
             <div
               class="gallery-item w-full mb-10 rounded-lg overflow-hidden object-cover"
