--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="./src/images/logo.png" />
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -31,14 +30,10 @@
             <button
               class="menu-toggle menu-icon flex flex-col gap-2 justify-center cursor-pointer z-100"
             >
+              <p class="border-2 border-white w-[50px] h-px z-100 border-t"></p>
+              <p class="border-2 border-white w-[50px] h-px z-100 border-n"></p>
               <p
-                class="border-2 border-white w-[50px] h-[1px] z-100 border-t"
-              ></p>
-              <p
-                class="border-2 border-white w-[50px] h-[1px] z-100 border-n"
-              ></p>
-              <p
-                class="border-2 border-white h-[1px] z-100 border-h custom-border"
+                class="border-2 border-white h-px z-100 border-h custom-border"
               ></p>
             </button>
           </div>
@@ -81,7 +76,7 @@
           >
             <span class="font-bold text-[#EA0026] lg:text-150">About</span> Us
           </h1>
-          <div class="border-1 border-[#454545] md:w-[60%] mx-auto mb-10"></div>
+          <div class="border border-[#454545] md:w-[60%] mx-auto mb-10"></div>
           <div class="container mx-auto md:px-20 lg:w-[80%]">
             <p
               class="text-white text-sm inter-lumos leading-8 mb-20 lg:text-[24px] lg:leading-10"
@@ -127,12 +122,6 @@
             .querySelector(".border-t")
             .classList.toggle("translate-y-[-20px]");
         });
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-    <script>
-      particlesJS.load("particles-js", "./particles.json", function () {
-        console.log("callback - particles-js config loaded");
-      });
     </script>
   </body>
 </html>
