--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <meta name="description" content="lumos Development Agency" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./src/css/main.css" />
+    <link rel="stylesheet" href="./src/css/main.css" defer />
     <title>Lumos | Home</title>
   </head>
 
@@ -68,7 +64,7 @@
                   >
                 </div>
                 <div
-                  class="hidden lg:flex flex-col items-start text-white gabarito-lumos text-right bg-black h-full absolute top-0 right-0 w-[32%] justify-center p-10"
+                  class="hidden lg:flex flex-col items-start text-white gabarito-lumos text-right bg-black h-full absolute top-0 right-0 w-[32%] justify-center p-10 gabarito-lumos"
                 >
                   <p class="text-[30px] text-[#EA0026]">Get In Touch</p>
                   <p class="text-white text-[20px]">
