--- a/index2.html
+++ b/index2.html
@@ -78,6 +78,11 @@
           </h1>
           <div class="border border-[#454545] md:w-[60%] mx-auto mb-10"></div>
           <div class="container mx-auto md:px-20 lg:w-[80%]">
+            <h1
+              class="text-white text-[30px] lg:text-[29px] leading-[34.8px] font-bold montserrat-lumos mb-5 text-center"
+            >
+              Lumos Development Studio
+            </h1>
             <p
               class="text-white text-sm inter-lumos leading-8 mb-20 lg:text-[24px] lg:leading-10"
             >
